# csgo-data-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: 1a-professionals_df.feather  1c-player_statistics.feather  3-test-results-sklearn.feather  professional-player-list.txt
src/: 1-data-aquisition.ipynb  2-data-cleaning.ipynb  4-classification-pytorch.ipynb  5-infernce.ipynb  classification-sklearn.ipynb  data-aquisition.ipynb  data-exploring.ipynb  player_match_statistics.feather
