[tool.poetry]
name = "csgo-data-analysis"
version = "0.1.0"
description = ""
authors = ["Tobias Hölzer <tobiashoelzer@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
pandas = "^1.4.2"
tqdm = "^4.64.0"
python-dotenv = "^0.20.0"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
scikit-learn = "^1.1.0"
requests = "^2.27.1"
feather-format = "^0.4.1"
torch = "^1.11.0"
optuna = "^2.10.0"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.0"
sklearn-pandas = "^2.2.0"
plotly = "^5.8.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
